# magicsquare

./: CMakeLists.txt  LICENSE  README.md
inc/GL/: GLmagicsquare.h  glut.h
inc/magicsquare/: magicsquare.h  matrixcolors.h
src/: magicsquare.cpp
